--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="w-12 h-12 bg-blue-100 text-blue-600 rounded-full flex items-center justify-center mx-auto mb-3 text-xl">
             <i class="fa-solid fa-wifi"></i>
         </div>
-        <h1 class="text-2xl font-bold text-slate-800">Générateur NFC</h1>
+        <h1 class="text-2xl font-bold text-slate-800">Générateur lien gmb</h1>
         <p class="text-slate-500 text-sm mt-1">Trouvez le lien Avis Google pour vos clients.</p>
     </div>
 
